--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,5 @@ publish = "composeApp/build/dist/js/productionExecutable/"
 [build.environment]
 # Force the build to use Java 17
 JAVA_VERSION = "17"
+# Explicitly tell Gradle to use the Java version set by the environment
+GRADLE_OPTS = "-Dorg.gradle.java.home=$JAVA_HOME"
