Netlify force push update

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,10 @@
 [build]
-# Tell gradle to run without using the background daemon
-command = "./gradlew jsBrowserDistribution --no-daemon"
+# Set the Java home directly in the build command
+command = "./gradlew -Dorg.gradle.java.home=$JAVA_HOME jsBrowserDistribution --no-daemon"
 
 # Directory to publish
 publish = "composeApp/build/dist/js/productionExecutable/"
 
 [build.environment]
-# Force the build to use Java 17
+# This sets the $JAVA_HOME variable that the command will use
 JAVA_VERSION = "17"
-# Explicitly tell Gradle to use the Java version set by the environment
-GRADLE_OPTS = "-Dorg.gradle.java.home=$JAVA_HOME"
