--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -1,34 +1,28 @@
-name: Build Web and Deploy
-
+name: Build and Deploy
 on:
   push:
-    branches:
-      - main
+    branches: [ main ] # Runs when you push to main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK
+      # 1. Set up Java 17 for Gradle
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: gradle
 
-      - name: Build Web Bundle with Gradle
-        run: ./gradlew :composeApp:wasmJsBrowserDistribution --stacktrace
+      # 2. Run the build
+      - name: Build with Gradle
+        run: ./gradlew jsBrowserDistribution
 
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v2.0
+      # 3. Deploy the built files to the 'gh-pages' branch
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          publish-dir: 'composeApp/build/dist/wasmJs/productionExecutable'
-          deploy-message: 'Deploy from GitHub Actions'
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./composeApp/build/dist/js/productionExecutable
