--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -1,28 +1,34 @@
-name: Build and Deploy
+name: Build Web and Deploy
+
 on:
   push:
-    branches: [ main ] # Runs when you push to main
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      # 1. Set up Java 17 for Gradle
-      - name: Set up JDK 17
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: gradle
 
-      # 2. Run the build
-      - name: Build with Gradle
-        run: ./gradlew jsBrowserDistribution
+      - name: Build Web Bundle with Gradle
+        run: ./gradlew :composeApp:wasmJsBrowserDistribution --stacktrace
 
-      # 3. Deploy the built files to the 'gh-pages' branch
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v2.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./composeApp/build/dist/js/productionExecutable
+          publish-dir: 'composeApp/build/dist/wasmJs/productionExecutable'
+          deploy-message: 'Deploy from GitHub Actions'
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        timeout-minutes: 1
