--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           publish-dir: 'composeApp/build/dist/wasmJs/productionExecutable'
           deploy-message: 'Deploy from GitHub Actions'
+          production-deploy: true
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
